# FasaEngine

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-cloud-run.yml  release.yml
data/: ASNS_nutrition_specification_database.csv  PAFF_practical_aquaculture_feed_formulation_database_Calculated_Composition.csv  PAFF_practical_aquaculture_feed_formulation_database_Feed_Formulations.csv
docs/: architecture.md  integration.md  testing-guide.md  versioning.md
examples/: tilapia_starter_demo.py
fasa_api/: __init__.py  main.py
fasa_core/: __init__.py  constraint_builder.py  crosswalk.py  data_loader.py  ingredient_pool.py  models.py  optimizer.py  validator.py
fasa_core/config/: __init__.py  crosswalk.json  defaults.py  ingredient_pool_africa.csv  premix_mask.json
tests/: test_api.py  test_smoke.py
