[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fasa-engine"
version = "0.1.0"
description = "Least-cost, digestibility-aware aquaculture feed formulation engine (FASA MVP)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "WorldFish Center" }]
dependencies = [
  "pandas>=2.0,<3.0",
  "numpy>=1.24,<3.0",
  "pulp>=2.7,<3.0",
  "highspy>=1.5,<2.0",
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.27,<1.0",
  "pydantic>=2.5,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0,<9.0",
  "httpx>=0.27,<1.0",
]

[project.urls]
Repository = "https://github.com/WorldFishCenter/FasaEngine"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["fasa_core*", "fasa_api*"]
